2013-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Fix Pi usage in Milena's apps.

	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv.cc:
	Here.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Use mln::math::pi instead of a local definition in Milena.

	* mln/algebra/quat.hh (mln::algebra::quat::set_unit): Here.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Set mln::math::pi to 20 decimals.

	* mln/math/pi.hh (mln::math::pi): Here.
	Use the value of the M_PI macro from glibc's math.h header.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Display Milena fatal errors on std::cerr, not std::cout.

	* mln/io/pdf/load.hh,
	* mln/io/tiff/load.hh:
	Here.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Remove Milena debug code making side effects on streams.

	* mln/accu/stat/median_alt.hh,
	* mln/canvas/browsing/dir_struct_elt_incr_update.hh,
	* mln/core/image/image2d.hh,
	* mln/core/internal/classical_window_base.hh,
	* mln/core/internal/image_morpher.hh,
	* mln/io/raw/load.hh,
	* mln/morpho/tree/data.hh,
	* mln/morpho/tree/impl/dual_hqueue.hh,
	* mln/morpho/tree/impl/dual_union_find.hh,
	* mln/morpho/watershed/topological.hh,
	* mln/util/edge.hh,
	* mln/util/timer.hh:
	Here.

2010-03-22  Roland Levillain  <roland@lrde.epita.fr>

	Remove old tools from doc/.

	* doc/Makefile.am (EXTRA_DIST): Remove generate_dist_files.sh and
	tools/clearbanner.sh.
	* doc/generate_dist_files.sh,
	* doc/tools/clearbanner.sh:
	Remove.

2013-08-23  Roland Levillain  <roland@lrde.epita.fr>

	Improve the generation of Doxyfiles in Milena.

	* doc/Makefile.am (edit)
	($(srcdir)/user-refman.stamp)
	($(srcdir)/devel-refman.stamp):
	Use `[@]' instead of `\@' for portability reasons.
	(ID): New (empty).
	(edit_devel): Prevent configure from expanding @builddir@.
	Christen the product as ``Developer documentation''.
	($(DOXYFILE_USER), $(DOXYFILE_DEVEL)): Do not depend on $Id$ from
	ChangeLog.